--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -2,10 +2,10 @@
   display: inline-block;
   font-size: 18px;
   padding: 12px;
-  color: #aaaaaa;
+  color: black;
   text-decoration: none;
 }
 
 .link:hover {
-  color: #e84a5f;
+  color: red;
 }
