--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -6,18 +6,29 @@
 .username {
   padding-right: 30px;
   font-size: 18px;
-  color: #aaaaaa;
 }
 
 .btn {
-  background: none;
-  height: 40px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: rgba(23, 26, 32, 0.8);
   border: none;
-  text-align: center;
-  font-size: 1rem;
-  color: whitesmoke;
-  background-color: #fa709a;
-  padding: 0.8rem 1.8rem;
-  border-radius: 2rem;
+  border-radius: 6px;
+  color: #fff;
+  flex-grow: 1;
+  font-family: SFProText-Regular, Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  height: 36px;
+  line-height: 20px;
+  margin-left: 8px;
+  margin-right: 6px;
+  min-width: 185px;
+  padding: 0 16px 0 16px;
+  color: white;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: rgba(23, 26, 32, 1);
   cursor: pointer;
 }
