--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,8 +1,8 @@
-/* .app {
+.app {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 20px;
   color: #010101;
-} */
+}
